--- a/app/src/main/res/layout/manuka_activity_splash_main_app.xml
+++ b/app/src/main/res/layout/manuka_activity_splash_main_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorGreen"
+    android:background="#019575"
     tools:context=".ui.SplashMainAppActivity">
 
         <LinearLayout
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/pattern_icon"
-            android:backgroundTint="#14000000"
+            android:backgroundTint="#0D000000"
             android:layout_margin="10dp"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
