--- a/app/src/main/res/menu/favourite.xml
+++ b/app/src/main/res/menu/favourite.xml
@@ -7,15 +7,15 @@
 
     <item
         android:id="@+id/action_share"
+        android:title="Share product"
         android:orderInCategory="300"
-        android:title="User"
         android:icon="@drawable/ic_baseline_share_24"
         app:showAsAction="ifRoom"></item>
     
     <item
         android:id="@+id/action_favorite"
+        android:title="Add to favourite"
         android:orderInCategory="300"
-        android:title="User"
         android:icon="@drawable/ic_baseline_favorite_border_24"
         app:showAsAction="ifRoom"></item>
 
