--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -7,7 +7,7 @@
     <solid android:color="@color/colorWhite" />
 
     <stroke
-        android:width="3dp"
-        android:color="#d9d9d9" />
+        android:width="1dp"
+        android:color="#DCD9D9D9" />
 
 </shape>
