--- a/app/src/main/res/menu/profile.xml
+++ b/app/src/main/res/menu/profile.xml
@@ -15,4 +15,11 @@
         android:icon="@drawable/ic_baseline_check_24_profile"
         app:showAsAction="ifRoom"></item>
 
+    <item
+        android:id="@+id/action_profile_security"
+        android:title="Update profile"
+        android:orderInCategory="300"
+        android:icon="@drawable/ic_baseline_security_24_profile"
+        app:showAsAction="ifRoom"></item>
+
 </menu>
