--- a/app/src/main/res/layout/manuka_posting_allowance.xml
+++ b/app/src/main/res/layout/manuka_posting_allowance.xml
@@ -26,8 +26,8 @@
             android:layout_height="wrap_content"
             android:text="@string/posting_allowance"
             android:textAlignment="textStart"
-            android:textColor="#000000"
-            android:textSize="16dp"
+            android:textColor="@color/colorBlackText"
+            android:textSize="@dimen/_13sdp"
             android:textStyle="bold"></TextView>
 
         <TextView
@@ -35,8 +35,8 @@
             android:layout_height="wrap_content"
             android:text="@string/free_on_ronicy"
             android:textAlignment="textStart"
-            android:textColor="#b3b3b3"
-            android:textSize="16dp"></TextView>
+            android:textSize="@dimen/_12sdp"></TextView>
+
     </LinearLayout>
 
 </LinearLayout>
