--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -5,10 +5,12 @@
 
     <item
         android:id="@+id/navHome"
+        android:checkable="true"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"></item>
     <item
         android:id="@+id/navSearch"
+        android:checkable="true"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Search"></item>
     <item
@@ -18,10 +20,12 @@
         android:title="New"></item>
     <item
         android:id="@+id/navChat"
+        android:checkable="true"
         android:icon="@drawable/ic_baseline_chat_24"
         android:title="Chat"></item>
     <item
         android:id="@+id/navAccount"
+        android:checkable="true"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Account"></item>
 
