--- a/app/src/main/res/layout/manuka_activity_dashboard_home.xml
+++ b/app/src/main/res/layout/manuka_activity_dashboard_home.xml
@@ -36,7 +36,7 @@
         android:text="@string/loading"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/_12sdp"
-        android:textStyle="bold" />
+        android:textStyle="italic" />
 
 
     <ScrollView
