--- a/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:background="#e6ecff"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context=".ui.administration.advertisement.NewAds">
+<!-- Manuka -->
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/swipeRefreshMyadds"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorHome"
-    tools:context=".ui.administration.advertisement.NewAds">
+    android:layout_height="wrap_content">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myaddsRecycle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="new ads" />
-
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="3dp"></androidx.recyclerview.widget.RecyclerView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</LinearLayout>
