--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,12 @@
         <item name="colorControlHighlight">@color/colorBlue</item>
     </style>
 
+    <style name="EditTextErrorTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorControlNormal">@color/colorGreyBtn</item>
+        <item name="colorControlActivated">@color/colorDangerDark</item>
+        <item name="colorControlHighlight">@color/colorDangerDark</item>
+    </style>
+
     <!-- Divya -->
 
 
