--- a/app/src/main/res/layout/manuka_custom_no_access_dialog.xml
+++ b/app/src/main/res/layout/manuka_custom_no_access_dialog.xml
@@ -15,9 +15,9 @@
 
         <TextView
             android:id="@+id/close"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:layout_gravity="end"
             android:text="x"
             android:textColor="@color/colorBlackText"
             android:textSize="@dimen/_16sdp"
