--- a/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
@@ -8,49 +8,50 @@
     tools:context=".ui.administration.advertisement.ApprovedRejected">
 
     <LinearLayout
-        android:layout_marginTop="@dimen/_6sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:background="@color/colorHome"
         android:backgroundTint="@color/colorWhite"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_4sdp"
         android:orientation="horizontal"
-        android:background="@color/colorHome">
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_4sdp">
 
-    <Button
-        android:id="@+id/approved"
-        android:text="Approved"
-        android:textSize="@dimen/_10sdp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/blue_btn_half_round"
-        android:layout_width="wrap_content"
-        android:paddingStart="@dimen/_16sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:layout_height="@dimen/_32sdp"/>
+        <Button
+            android:id="@+id/approved"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_32sdp"
+            android:background="@drawable/blue_btn_half_round"
+            android:paddingStart="@dimen/_16sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:text="Approved"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/_10sdp" />
 
         <Button
             android:id="@+id/rejected"
-            android:text="Rejected"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/colorWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_32sdp"
+            android:background="@drawable/red_btn_half_round"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_16sdp"
-            android:background="@drawable/red_btn_half_round"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_32sdp"/>
+            android:text="Rejected"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/_10sdp" />
 
     </LinearLayout>
+
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:background="@color/colorWhite"
         android:paddingStart="@dimen/_12sdp"
-        android:textSize="@dimen/_10sdp"
         android:paddingBottom="@dimen/_4sdp"
-        android:textStyle="italic"
-        android:layout_marginBottom="@dimen/_6sdp"
         android:text="Note: These Ads are filtered considering the approval status and visibility of the advertisements are not considered."
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textSize="@dimen/_10sdp"
+        android:textStyle="italic" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshMyadds"
@@ -59,12 +60,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/myaddsRecycle"
-            android:layout_alignBottom="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="3dp"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp"></androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
