manuka - admin ads statistics made

--- a/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
@@ -3,11 +3,23 @@
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
-android:background="#e6ecff"
+android:background="@color/colorHome"
 android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".ui.administration.advertisement.NewAds">
-<!-- Manuka -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_2sdp"
+        android:background="@color/colorWhite"
+        android:paddingStart="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:paddingBottom="@dimen/_4sdp"
+        android:text="@string/reviewAdsTitle"
+        android:textSize="@dimen/_10sdp"
+        android:textStyle="italic" />
+
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/swipeRefreshMyadds"
     android:layout_width="match_parent"
@@ -18,7 +30,6 @@ tools:context=".ui.administration.advertisement.NewAds">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="3dp"></androidx.recyclerview.widget.RecyclerView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
