manuka - admin ads statistics visibility Listners added

--- a/app/src/main/res/layout/manuka_admin_fragment_statistic_ads.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_statistic_ads.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorHome"
+    android:id="@+id/scrollbar"
     tools:context=".ui.administration.advertisement.StatisticAds">
 
     <LinearLayout
@@ -152,6 +153,23 @@
 
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/pieChart3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_260sdp"
+            android:layout_margin="@dimen/_4sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:elevation="@dimen/_14sdp"
+            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardUseCompatPadding="true">
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lineChart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
